# warcraft-vscode

./: .editorconfig  .gitattributes  .gitignore  .lua-format  .npmignore  .travis.yml  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.en.md  README.md  package-lock.json  package.json  postinstall.js  prepare.js  prepare.mjs  prepublish.js  tsconfig.json  tslint.json  update-resource.js  warcraft_validation.json  webpack.config.js
.github/workflows/: ci.yml  node.js.yml  rust.yml
crates/wc3-cli/: Cargo.toml
crates/wc3-cli/src/: main.rs
crates/wc3-confuse/: Cargo.toml
crates/wc3-confuse/src/: main.rs
crates/wc3-core/: Cargo.toml
crates/wc3-core/assets/: main-debug.lua  main-release.lua
crates/wc3-core/assets/objediting/: application.lua
crates/wc3-core/assets/objediting/base/: class.lua  init.lua  string.lua  table.lua
crates/wc3-core/assets/objediting/core/: checker.lua  dummper.lua  enum.lua  main.lua  object.lua  objectreader.lua  objectwriter.lua  readbuffer.lua  writebuffer.lua
crates/wc3-core/assets/objediting/object/: AbilityObjEditing.lua  BuffObjEditing.lua  DestructableObjEditing.lua  ItemObjEditing.lua  UnitObjEditing.lua  UpgradeObjEditing.lua
crates/wc3-core/src/: compiler.rs  comptime.rs  config.rs  error.rs  fsutil.rs  jass.rs  lib.rs  luastr.rs  macros.rs  minify.rs  mopaq.rs  mpq.rs  objediting.rs  packer.rs  require_graph.rs  templates.rs
crates/wc3-core/tests/: confuse_bench.rs  golden.rs  golden_pack.rs
resources/: debug.lua
scripts/: build-rust.js  make-golden.ps1
src/: app.ts  cli.ts  code.ts  commands.ts  compiler.ts  config.ts  environment.ts  error.ts  extension.ts  globals.ts  init.ts  lib.ts  option.ts  pack.ts  packer.ts  proc.ts  process.ts  project.ts  project.ts~  report.ts  runner.ts  util.ts  utils.ts
src/app/: app.ts  bridge.ts  command.ts  commands.ts  diagnostics.ts  index.ts  lib.ts
src/compiler/: debug.ts  private.ts
src/env/: config.ts  environment.ts  index.ts  runtime.ts
src/globals/: errors.ts  globals.ts  index.ts  localize.ts
src/packer/: debug.ts
src/pb/: product.js
src/project/: checker.ts  index.ts  project.ts
src/runner/: editor.ts  game.ts  private.ts  proc.ts  runner.ts
src/templates/: index.ts
src/utils/: blizzard.ts  confuser.ts  decorators.ts  index.ts  proc.ts  prometheus.ts  report.ts  utils.ts
templates/: debug.lua
templates/debug/: file.lua  main.lua
templates/release/: file.lua  main.lua
testdata/golden/: README.md
typings/modules/: index.d.ts
(+75 files in other folders)
