[workspace]
resolver = "2"
members = ["crates/wc3-core", "crates/wc3-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
full_moon = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
walkdir = "2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
