[package]
name = "wc3-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
full_moon.workspace = true
mlua.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
walkdir.workspace = true
thiserror.workspace = true
stormlib.workspace = true
zip.workspace = true

[dev-dependencies]
# 集成测试（tests/golden.rs）的沙箱执行需要直接使用 mlua
mlua.workspace = true
